<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MyApplication"
    tools:context="com.example.consultorio.activities.cancelarCita">

    <SearchView
        android:layout_width="395dp"
        android:layout_height="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="-3dp"
                android:fontFamily="monospace"
                android:text="Cancelacion de citas"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView15" />

            <EditText
                android:id="@+id/txtapellidoPaterno_fk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView17" />

            <EditText
                android:id="@+id/txtapellidoMaterno_fk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView18" />

            <EditText
                android:id="@+id/txtNombre_fk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView19" />

            <EditText
                android:id="@+id/txtfechaNacimiento_fk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView20" />

            <EditText
                android:id="@+id/id_Cliente_fk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView21" />

            <RadioGroup
                android:id="@+id/rbtnGnearo_fk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbtnFemenino_fk"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:text="@string/rbtnMujer"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rbtnMasculino_fk"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:text="@string/rbtnHombre"
                    android:textSize="14sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView22" />

            <Spinner
                android:id="@+id/spnEspecialidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView23" />

            <Spinner
                android:id="@+id/spnTratamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView24" />

            <RadioGroup
                android:id="@+id/rbtnAlergias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbtnSi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtnSi"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/txtAlergias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="¿Cuales?"
                    android:inputType="textPersonName"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/rbtnNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtnNo"
                    android:textSize="14sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView25" />

            <EditText
                android:id="@+id/txtnumeroContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="phone"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView28" />

            <EditText
                android:id="@+id/txtfechaCita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView26" />

            <EditText
                android:id="@+id/txtHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="time"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView27" />

            <CheckBox
                android:id="@+id/chbStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/chbStatus" />

            <Button
                android:id="@+id/btnModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00BCD4"
                android:text="Guardar"/>

        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnHome"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="290dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="61dp"
        android:backgroundTint="#4CD6B7"
        android:onClick="volverInicio"
        android:src="@drawable/homebuttom"
        app:borderWidth="0dp"
        app:elevation="4dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>